# baguette-lsp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
client/: package.json
src/: main.rs
