[package]
name = "baguette-lsp"
version = "0.1.0"
edition = "2021"
categories = ["command-line-interface"]
homepage = "https://baguettesharp.nwa2coco.fr"
keywords = ["cli","lsp"]
repository = "https://github.com/coco33920/baguette-lsp"
description = "The official LSP implementation of the Baguette# language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}