[package]
name = "baguette-lsp"
version = "0.1.0"
edition = "2021"
categories = ["command-line-interface"]
homepage = "https://baguettesharp.nwa2coco.fr"
keywords = ["cli","lsp"]
repository = "https://github.com/coco33920/baguette-lsp"
description = "The official LSP implementation of the Baguette# language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.3"
env_logger = { version = "0.10.0", features = [] }
ropey = "1.5.0"
serde_json = { version = "1.0.78", features = [] }
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
im-rc = "15.0.0"